--- a/css/style.css
+++ b/css/style.css
@@ -525,13 +525,13 @@ select {
     background-color: var(--brand-white);
 }
 
-.form-control.fc-active-red {
+.row-ticket-active .form-control {
     background-color: var(--brand-red);
     border-color: var(--brand-red);
     color: var(--brand-white);
 }
 
-.form-control.fc-active-red-light {
+.row-ticket-active .form-control.fc-active-red-light {
     background-color: #fdedee;
     border-color: #fdedee;
     color: var(--brand-red);
