--- a/css/style.css
+++ b/css/style.css
@@ -3128,6 +3128,7 @@ header .btn {
         font-family: var(--font-fa);
         font-weight: 600;
         position: absolute;
+        opacity: .7;
         right: 30px;
         bottom: 140px;
         z-index: 9;
