--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
-/* 
+/* ----------
 
-Drzavna lutrija srbije
-style.css
+DRZAVNA LUTRIJA SRBIJE
+style.css | style-1.css
 
-*/
+Milan Petrovic
+Igor Jankovic
+
+------------- */
 
 
 * {
